@@ -1,5 +1,10 @@
 2008-01-08  Richard Jones  <rjones@redhat.com>
 
+	Type Vc_domain_ops.dops_callback_fn for clarity.
+	* virt-ctrl/vc_domain_ops.mli, virt-ctrl/vc_domain_ops.ml,
+	  virt-ctrl/vc_mainwindow.mli: Give a type name to the domain_ops
+	  callback type, for extra clarity.
+
 	Change comments virt-manager -> virt-ctrl.
 	* virt-ctrl/*.ml, virt-ctrl/*.mli: Change comments virt-manager ->
 	  virt-ctrl.
